Getting posted to online repo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learning to Cook like Mom</title>
 </head>
-<!--NEED TO STILL ADD ORDER LIST AND UNORDERED LIST-->
+<!--NEED TO STILL ADD ORDER LIST AND UNORDERED LIST NEED TO DO-->
 <body>
     <!--Header-->
     <header>
@@ -44,7 +44,7 @@
         <p><strong>From our kitchen to yours,</strong></p>
         <p><em>Anne and Mariah</em><br>
             <em> Cooking like mom</em> <br>
-            <a href="mailto:quiency3.14@gmail.com">Vegan</a>
+            <a href="mailto:quiency3.14@gmail.com"> Any questions send us an email!</a>
         </p>
     </main>
 </body>
