--- a/vegan.html
+++ b/vegan.html
@@ -12,6 +12,7 @@
     </header>
     <!--VEGAN PAGE LINK-->
     <h2 id = "vegan"></h2>
+    <p>Trying to get the git to work</p>
 </body>
 <!--Footer-->
 <footer>
