Getting started at this repo

--- a/dairyfree.html
+++ b/dairyfree.html
@@ -12,6 +12,7 @@
     </header>
      <!--DAIRYFREE PAGE LINK-->
      <h2 id = "dairy"></h2>
+     <p>Find out why to cook dairy free other than allergies</p>
 </body>
 <!--Footer-->
 <footer>
