--- a/glutenfree.html
+++ b/glutenfree.html
@@ -12,6 +12,7 @@
     </header>
      <!--GLUTEN FREE PAGE LINK-->
      <h2 id = "Gluten"></h2>
+     <p>Find out why to cook gluten free other than allergies</p>
     
 </body>
 <!--Footer-->
