--- a/vegan.html
+++ b/vegan.html
@@ -11,8 +11,8 @@
         <h1>Mom's Vegan Recipes</h1>
     </header>
     <!--VEGAN PAGE LINK-->
-    <h2 id = "vegan"></h2>
-    <p>Trying to get the git to work</p>
+    <h2 id = "vegan">Why cooking Vegan</h2>
+    <p>Find out why to cook vegan other than allergies</p>
 </body>
 <!--Footer-->
 <footer>
