--- a/vegetarian.html
+++ b/vegetarian.html
@@ -12,6 +12,7 @@
     </header>
      <!--VEGETARIAN PAGE LINK-->
      <h2 id = "vegetarian"></h2>
+     <p>Find out why to cook vegetarian other than allergies</p>
 </body>
 <!--Footer-->
 <footer>
