Getting this started in repo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learning to Cook like Mom</title>
 </head>
-<!--NEED TO STILL ADD ORDER LIST AND UNORDERED LIST NEED TO DO-->
+<!--NEED TO STILL ADD LIST ELEMENTS REQUIREMENTS NEED TO DO-->
 <body>
     <!--Header-->
     <header>
@@ -50,7 +50,7 @@
 </body>
 <!--Footer-->
 <footer>
-    <p> ©2020 ∙ Built by Mariah for DGM 2120</p>
+    <p> © Jan 27 2020 ∙ Built by Mariah Foester for Spring DGM 2120</p>
 </footer>
 
 </html>
