--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learning to Cook like Mom</title>
 </head>
-<!--NEED TO STILL ADD LIST ELEMENTS REQUIREMENTS NEED TO DO-->
+<!--Body-->
+
 <body>
     <!--Header-->
     <header>
@@ -31,7 +32,15 @@
             has been cooking for a long time first when she was learning to cook and now teaching all those who ask how.
             One of the great things she has with her cooking is that she can cook for anyone no matter the limitations
             they have with food. This is where we will be making recipes and putting them up so that everyone can learn
-            how to cook with me. </p>
+            how to cook. </p>
+        <p> 5 reasons why I am learning to cook for food limitations</p>
+        <ol>
+            <li>I have my own food limitations</li>
+            <li>It is always nice to be able to cook for anyone</li>
+            <li>I need to learn how to cook</li>
+            <li>As more people are choicing to eat in different ways I will need to be able to cook for them </li>
+            <li>It is healthier to cook</li>
+        </ol>
         <p> Before we start we should mention that all the recipes here are made for people who are <a
                 href="vegan.html#vegan">Vegan</a>, <a href="vegetarian.html#vegetarian">Vegetarian</a>, <a
                 href="dairyfree.html#dairy">Dairy Free</a>, and <a href="glutenfree.html#Gluten">Gluten Free</a>. If you
@@ -41,6 +50,14 @@
                 href="https://www.researchgate.net/profile/Richard_Kahn3/publication/240595840_The_Way_We_Eat_Why_Our_Food_Choices_Matter_By_Peter_Singer_and_Jim_Mason_Published_by_Rodale_May_2006_2595_US3495_CAN_ISBN_1-57954-889-X_288_pages/links/00b4951e77368e50ea000000/The-Way-We-Eat-Why-Our-Food-Choices-Matter-By-Peter-Singer-and-Jim-Mason-Published-by-Rodale-May-2006-2595-US-3495-CAN-ISBN-1-57954-889-X-288-pages.pdf"
                 target='_blank'> to see how our eating choices matter.</a>
         </p>
+        <p>Some of the recipes that will be on each page are</p>
+        <ul>
+            <li>breakfast recipes</li>
+            <li>lunch recipes</li>
+            <li>dinner recipes</li>
+            <li>snack recipes</li>
+            <li>dessert recipes</li>
+        </ul>
         <p><strong>From our kitchen to yours,</strong></p>
         <p><em>Anne and Mariah</em><br>
             <em> Cooking like mom</em> <br>
