--- a/vegan.html
+++ b/vegan.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Vegan Recipes</title>
 </head>
+
 <body>
     <header>
         <h1>Mom's Vegan Recipes</h1>
     </header>
     <!--VEGAN PAGE LINK-->
-    <h2 id = "vegan">Why cooking Vegan</h2>
+    <h2 id="vegan">Why cooking Vegan</h2>
     <p>Find out why to cook vegan other than allergies</p>
+    <!--Recipes sections-->
+    <h2>Breakfast Recipes</h2>
+    <h2>Lunch Recipes</h2>
+    <h2>Dinner Recipes</h2>
+    <h2>Snack Recipes</h2>
+    <h2>Dessert Recipes</h2>
 </body>
 <!--Footer-->
 <footer>
     <p> ©2020 ∙ Built by Mariah for DGM 2120</p>
 </footer>
+
 </html>
