--- a/vegetarian.html
+++ b/vegetarian.html
@@ -12,6 +12,16 @@
     <header>
         <h1>Mom's Vegetarian Recipes</h1>
     </header>
+    <!--Navagation-->
+    <nav>
+        <ul>
+            <li><a href="index.html"> Home </a></li>
+            <li><a href="dairyfree.html"> Dairy Free Recipes </a></li>
+            <li><a href="vegetarian.html"> Vegetarian Recipes </a></li>
+            <li><a href="glutenfree.html"> Gluten Free Recipes </a></li>
+            <li><a href="vegan.html"> Vegan Recipes </a></li>
+        </ul>
+    </nav>
     <!--VEGETARIAN PAGE LINK-->
     <h2 id="vegetarian"></h2>
     <p>Find out why to cook vegetarian other than allergies</p>
