Editted the email

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <p><strong>From our kitchen to yours,</strong></p>
         <p><em>Anne and Mariah</em><br>
             <em> Cooking like mom</em> <br>
-            <a href="mailto:quiency3.14@gmail.com"> Any questions send us an email!</a>
+            <a href="mailto:quiency3.14@gmail.com"> Any questions send us an email at quiency3.14@gmail.com</a>
         </p>
     </main>
 </body>
