--- a/dairyfree.html
+++ b/dairyfree.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="dairy.css">
+    <link href="/css files/dairy.css" rel="stylesheet">
     <title>Dairy Free Recipes</title>
 </head>
 
