Working on styling

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <header>
         <h1> Learning to Cook like Mom</h1>
         <h2>From our kitchen to yours</h2>
+
     </header>
     <!--Navagation-->
-    <nav>
-        <ul>
+    <nav id ="navbar">
+        <ul id = "navlist">
             <li><a href="index.html"> Home </a></li>
             <li><a href="dairyfree.html"> Dairy Free Recipes </a></li>
             <li><a href="vegetarian.html"> Vegetarian Recipes </a></li>
