--- a/dairyfree.html
+++ b/dairyfree.html
@@ -14,8 +14,8 @@
         <h1>Mom's Dairy Free Recipes</h1>
     </header>
     <!--Navagation-->
-    <nav>
-        <ul>
+    <nav id="navbar">
+        <ul id="navlist">
             <li><a href="index.html"> Home </a></li>
             <li><a href="dairyfree.html"> Dairy Free Recipes </a></li>
             <li><a href="vegetarian.html"> Vegetarian Recipes </a></li>
@@ -24,14 +24,16 @@
         </ul>
     </nav>
     <!--DAIRYFREE PAGE LINK-->
-    <h2 id="dairy"></h2>
-    <p>Find out why to cook dairy free other than allergies</p>
-    <!--Recipes sections-->
-    <h2>Breakfast Recipes</h2>
-    <h2>Lunch Recipes</h2>
-    <h2>Dinner Recipes</h2>
-    <h2>Snack Recipes</h2>
-    <h2>Dessert Recipes</h2>
+    <main>
+        <h2 id="dairy"> Why to cook Dairy Free</h2>
+        <p>Find out why to cook dairy free other than allergies</p>
+        <!--Recipes sections-->
+        <h2>Breakfast Recipes</h2>
+        <h2>Lunch Recipes</h2>
+        <h2>Dinner Recipes</h2>
+        <h2>Snack Recipes</h2>
+        <h2>Dessert Recipes</h2>
+    </main>
 </body>
 <!--Footer-->
 <footer>
