--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 target='_blank'> to see how our eating choices matter.</a>
         </p>
         <p>Some of the recipes that will be on each page are</p>
-        <ul>
+        <ul id = "what">
             <li>breakfast recipes</li>
             <li>lunch recipes</li>
             <li>dinner recipes</li>
