--- a/dairyfree.html
+++ b/dairyfree.html
@@ -26,7 +26,14 @@
     <!--DAIRYFREE PAGE LINK-->
     <main>
         <h2 id="dairy"> Why to cook Dairy Free</h2>
-        <p>Find out why to cook dairy free other than allergies</p>
+        <p>Find out why to cook dairy free other than allergies. Before I list MY reason I would like to say I have
+            nothing against eating and drinking dairy products.</p>
+        <ul id ="why">
+            <li>helps prevents headaches</li>
+            <li>allows healthy digestion</li>
+            <li>allows more energy (especially for those who are allergic)</li>
+            <li>gives a reason to keep other forms of "milk" in business</li>
+        </ul>
         <!--Recipes sections-->
         <h2>Breakfast Recipes</h2>
         <h2>Lunch Recipes</h2>
@@ -39,5 +46,4 @@
 <footer>
     <p> ©2020 ∙ Built by Mariah for DGM 2120</p>
 </footer>
-
 </html>
