added some recipes

--- a/dairyfree.html
+++ b/dairyfree.html
@@ -26,7 +26,7 @@
     <!--DAIRYFREE PAGE LINK-->
     <main>
         <h2 id="dairy"> Why to cook Dairy Free</h2>
-        <p>Find out why to cook dairy free other than allergies. Before I list MY reason I would like to say I have
+        <p>Find out why to cook dairy free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
             nothing against eating and drinking dairy products.</p>
         <ul id ="why">
             <li>helps prevents headaches</li>
@@ -44,6 +44,6 @@
 </body>
 <!--Footer-->
 <footer>
-    <p> ©2020 ∙ Built by Mariah for DGM 2120</p>
+    <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
 </html>
