--- a/glutenfree.html
+++ b/glutenfree.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="/css files/gluten.css" rel="stylesheet">
-    <title>Gluten Free Recipes</title>
+    <link href="/css files/dairy.css" rel="stylesheet">
+    <title>Dairy Free Recipes</title>
 </head>
 
 <body>
     <header>
-        <h1>Mom's Gluten Free Recipes</h1>
+        <h1>Mom's Dairy Free Recipes</h1>
     </header>
     <!--Navagation-->
     <nav id="navbar">
@@ -23,10 +23,16 @@
             <li><a href="vegan.html"> Vegan Recipes </a></li>
         </ul>
     </nav>
-    <!--GLUTEN FREE PAGE LINK-->
+    <!--DAIRYFREE PAGE LINK-->
     <main>
-        <h2 id="Gluten"> Why to cook Gluten Free</h2>
-        <p>Find out why to cook gluten free other than allergies</p>
+        <h2 id="dairy"> Why to cook Dairy Free</h2>
+        <p>Find out why to cook dairy free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
+            nothing against bread and carbs.</p>
+        <ul id ="why">
+            <li>allows the stomach to calm easier</li>
+            <li>is healthier for some people</li>
+            <li>I honestly I don't much why other than allergies</li>
+        </ul>
         <!--Recipes sections-->
         <h2>Breakfast Recipes</h2>
         <h2>Lunch Recipes</h2>
@@ -37,7 +43,6 @@
 </body>
 <!--Footer-->
 <footer>
-    <p> ©2020 ∙ Built by Mariah for DGM 2120</p>
+    <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
-
 </html>
