--- a/vegan.html
+++ b/vegan.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="/css files/vegan.css" rel="stylesheet">
-    <title>Vegan Recipes</title>
+    <link href="/css files/dairy.css" rel="stylesheet">
+    <title>Dairy Free Recipes</title>
 </head>
 
 <body>
     <header>
-        <h1>Mom's Vegan Recipes</h1>
+        <h1>Mom's Dairy Free Recipes</h1>
     </header>
     <!--Navagation-->
     <nav id="navbar">
@@ -23,10 +23,17 @@
             <li><a href="vegan.html"> Vegan Recipes </a></li>
         </ul>
     </nav>
-    <!--VEGAN PAGE LINK-->
+    <!--DAIRYFREE PAGE LINK-->
     <main>
-        <h2 id="vegan">Why to cook Vegan</h2>
-        <p>Find out why to cook vegan other than allergies</p>
+        <h2 id="dairy"> Why to cook Dairy Free</h2>
+        <p>Find out why to cook dairy free other than allergies. Before I list <strong> MY </strong> I would like to say I have
+            nothing against eating meat/animal products.</p>
+        <ul id ="why">
+            <li>Is healthier for some people</li>
+            <li>helps get enough nutrients but you will need to watch this</li>
+            <li>allows more energy (especially for those who are allergic)</li>
+            <li>gives a reason to keep other forms of "milk" in business</li>
+        </ul>
         <!--Recipes sections-->
         <h2>Breakfast Recipes</h2>
         <h2>Lunch Recipes</h2>
@@ -37,7 +44,6 @@
 </body>
 <!--Footer-->
 <footer>
-    <p> ©2020 ∙ Built by Mariah for DGM 2120</p>
+    <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
-
 </html>
