--- a/vegetarian.html
+++ b/vegetarian.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="/css files/vegetarian.css" rel="stylesheet">
-    <title>Vegetarian Recipes</title>
+    <link href="/css files/dairy.css" rel="stylesheet">
+    <title>Dairy Free Recipes</title>
 </head>
 
 <body>
     <header>
-        <h1>Mom's Vegetarian Recipes</h1>
+        <h1>Mom's Dairy Free Recipes</h1>
     </header>
     <!--Navagation-->
     <nav id="navbar">
@@ -23,21 +23,37 @@
             <li><a href="vegan.html"> Vegan Recipes </a></li>
         </ul>
     </nav>
-    <!--VEGETARIAN PAGE LINK-->
+    <!--DAIRYFREE PAGE LINK-->
     <main>
-        <h2 id="vegetarian"> Why to cook Vegetarian</h2>
-        <p>Find out why to cook vegetarian other than allergies</p>
+        <h2 id="dairy"> Why to cook Dairy Free</h2>
+        <p>Find out why to cook dairy free other than allergies. Before I list <strong> MY </strong> reason I would like
+            to say I have
+            nothing against eating meat/animal products.</p>
+        <ul id="why">
+            <li>It the green stuff we are supposed to eat</li>
+            <li>Veggies have the needed nutrients that we need</li>
+            <li>allows more energy becasue you get more nutrients</li>
+        </ul>
         <!--Recipes sections-->
         <h2>Breakfast Recipes</h2>
         <h2>Lunch Recipes</h2>
         <h2>Dinner Recipes</h2>
         <h2>Snack Recipes</h2>
+        <h4>
+            Ants on a Log???
+        </h4>
+        <p> <em>Growing up this was how my mom got me to eat a healthy snack. My mom knew I struggled eating healthy
+                snacks so as I ate the snack she would tell me stories about how the "ants" got stuck in the peanut
+                butter or about how the "ants" were going on an adventure in a boat.</em></p>
+        <p>What you will need is celery, peanut butter, and raisins.</p>
+        <p>All you need to do is cut and prepare the celery then put peanut butter through the middle of the groove of
+            the celery, until you have the amount you like, then sprinkle the raisins on top of the peanut butter</p>
         <h2>Dessert Recipes</h2>
     </main>
 </body>
 <!--Footer-->
 <footer>
-    <p> ©2020 ∙ Built by Mariah for DGM 2120</p>
+    <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
 
 </html>
