--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </body>
 <!--Footer-->
 <footer>
-    <h3> © Jan 27 2020 ∙ Built by Mariah Foester for Spring DGM 2120</h3>
+    <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
 
 </html>
