--- a/glutenfree.html
+++ b/glutenfree.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+        </style>
     <link href="/css files/dairy.css" rel="stylesheet">
     <title>Dairy Free Recipes</title>
 </head>
