Working to fix footer

--- a/dairyfree.html
+++ b/dairyfree.html
@@ -38,11 +38,11 @@
             <li>gives a reason to keep other forms of "milk" in business</li>
         </ul>
         <!--Recipes sections-->
-        <h2>Breakfast Recipes</h2>
-        <h2>Lunch Recipes</h2>
-        <h2>Dinner Recipes</h2>
-        <h2>Snack Recipes</h2>
-        <h2>Dessert Recipes</h2>
+        <h2 class = "Header">Breakfast Recipes</h2>
+        <h2 class = "Header">Lunch Recipes</h2>
+        <h2 class = "Header">Dinner Recipes</h2>
+        <h2 class = "Header">Snack Recipes</h2>
+        <h2 class = "Header">Dessert Recipes</h2>
     </main>
 </body>
 <!--Footer-->
