--- a/glutenfree.html
+++ b/glutenfree.html
@@ -9,12 +9,12 @@
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
     <link href="/css files/dairy.css" rel="stylesheet">
-    <title>Dairy Free Recipes</title>
+    <title>Gluten Free Recipes</title>
 </head>
 
 <body>
     <header>
-        <h1>Mom's Dairy Free Recipes</h1>
+        <h1>Mom's Gluten Free Recipes</h1>
     </header>
     <!--Navagation-->
     <nav id="navbar">
@@ -28,8 +28,8 @@
     </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
-        <h2 id="dairy"> Why to cook Dairy Free</h2>
-        <p>Find out why to cook dairy free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
+        <h2 id="dairy"> Why to cook Gluten Free</h2>
+        <p>Find out why to cook gluten free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
             nothing against bread and carbs.</p>
         <ul id ="why">
             <li>allows the stomach to calm easier</li>
@@ -37,11 +37,11 @@
             <li>I honestly I don't much why other than allergies</li>
         </ul>
         <!--Recipes sections-->
-        <h2>Breakfast Recipes</h2>
-        <h2>Lunch Recipes</h2>
-        <h2>Dinner Recipes</h2>
-        <h2>Snack Recipes</h2>
-        <h2>Dessert Recipes</h2>
+        <h2 class = "Header">Breakfast Recipes</h2>
+        <h2 class = "Header">Lunch Recipes</h2>
+        <h2 class = "Header">Dinner Recipes</h2>
+        <h2 class = "Header">Snack Recipes</h2>
+        <h2 class = "Header">Dessert Recipes</h2>
     </main>
 </body>
 <!--Footer-->
