--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-        </style>
+    </style>
     <link href="/css files/style.css" rel="stylesheet">
     <title>Learning to Cook like Mom</title>
 </head>
@@ -39,14 +39,14 @@
             they have with food. This is where we will be making recipes and putting them up so that everyone can learn
             how to cook. </p>
         <p> 5 reasons why I am learning to cook for food limitations</p>
-        <ol>
+        <ol class="list">
             <li>I have my own food limitations</li>
             <li>It is always nice to be able to cook for anyone</li>
             <li>I need to learn how to cook</li>
             <li>As more people are choicing to eat in different ways I will need to be able to cook for them </li>
             <li>It is healthier to cook</li>
         </ol>
-        <p> Before we start we should mention that all the recipes here are made for people who are <a
+        <p id ="links"> Before we start we should mention that all the recipes here are made for people who are <a
                 href="vegan.html#vegan">Vegan</a>, <a href="vegetarian.html#vegetarian">Vegetarian</a>, <a
                 href="dairyfree.html#dairy">Dairy Free</a>, and <a href="glutenfree.html#Gluten">Gluten Free</a>. If you
             have questions about health and eating any of these ways you can visit <a
@@ -56,13 +56,19 @@
                 target='_blank'> to see how our eating choices matter.</a>
         </p>
         <p>Some of the recipes that will be on each page are</p>
-        <ul id = "what">
+        <ul id="what" class="list">
             <li>breakfast recipes</li>
             <li>lunch recipes</li>
             <li>dinner recipes</li>
             <li>snack recipes</li>
             <li>dessert recipes</li>
         </ul>
+        <p>Quick last word</p>
+        <dl>
+            <dt>Some of the recipes we have used and that will be on this site was found online so we will be linking
+                where we found the original recipe.</dt>
+                <dd> You can reach the original recipes by clicking on the title on the recipe</dd>
+        </dl>
         <p><strong>From our kitchen to yours,</strong></p>
         <p><em>Anne and Mariah</em><br>
             <em> Cooking like mom</em> <br>
@@ -74,5 +80,4 @@
 <footer>
     <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
-
 </html>
