--- a/vegan.html
+++ b/vegan.html
@@ -9,12 +9,12 @@
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
     <link href="/css files/dairy.css" rel="stylesheet">
-    <title>Dairy Free Recipes</title>
+    <title>Vegan Recipes</title>
 </head>
 
 <body>
     <header>
-        <h1>Mom's Dairy Free Recipes</h1>
+        <h1>Mom's Vegan Recipes</h1>
     </header>
     <!--Navagation-->
     <nav id="navbar">
@@ -28,8 +28,8 @@
     </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
-        <h2 id="dairy"> Why to cook Dairy Free</h2>
-        <p>Find out why to cook dairy free other than allergies. Before I list <strong> MY </strong> I would like to say I have
+        <h2 id="dairy"> Why to cook Vegan</h2>
+        <p>Find out why to cook vegan other than allergies. Before I list <strong> MY </strong> I would like to say I have
             nothing against eating meat/animal products.</p>
         <ul id ="why">
             <li>Is healthier for some people</li>
@@ -38,11 +38,11 @@
             <li>gives a reason to keep other forms of "milk" in business</li>
         </ul>
         <!--Recipes sections-->
-        <h2>Breakfast Recipes</h2>
-        <h2>Lunch Recipes</h2>
-        <h2>Dinner Recipes</h2>
-        <h2>Snack Recipes</h2>
-        <h2>Dessert Recipes</h2>
+        <h2 class = "Header">Breakfast Recipes</h2>
+        <h2 class = "Header">Lunch Recipes</h2>
+        <h2 class = "Header">Dinner Recipes</h2>
+        <h2 class = "Header">Snack Recipes</h2>
+        <h2 class = "Header">Dessert Recipes</h2>
     </main>
 </body>
 <!--Footer-->
