--- a/vegetarian.html
+++ b/vegetarian.html
@@ -9,12 +9,12 @@
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
     <link href="/css files/dairy.css" rel="stylesheet">
-    <title>Dairy Free Recipes</title>
+    <title>Vegetarian Recipes</title>
 </head>
 
 <body>
     <header>
-        <h1>Mom's Dairy Free Recipes</h1>
+        <h1>Mom's Vegetarian Free Recipes</h1>
     </header>
     <!--Navagation-->
     <nav id="navbar">
@@ -28,8 +28,8 @@
     </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
-        <h2 id="dairy"> Why to cook Dairy Free</h2>
-        <p>Find out why to cook dairy free other than allergies. Before I list <strong> MY </strong> reason I would like
+        <h2 id="dairy"> Why to cook Vegetarian</h2>
+        <p>Find out why to cook Vegetarian other than allergies. Before I list <strong> MY </strong> reason I would like
             to say I have
             nothing against eating meat/animal products.</p>
         <ul id="why">
@@ -38,10 +38,10 @@
             <li>allows more energy becasue you get more nutrients</li>
         </ul>
         <!--Recipes sections-->
-        <h2>Breakfast Recipes</h2>
-        <h2>Lunch Recipes</h2>
-        <h2>Dinner Recipes</h2>
-        <h2>Snack Recipes</h2>
+        <h2 class = "Header">Breakfast Recipes</h2>
+        <h2 class = "Header">Lunch Recipes</h2>
+        <h2 class = "Header">Dinner Recipes</h2>
+        <h2 class = "Header">Snack Recipes</h2>
         <h4>
             Ants on a Log???
         </h4>
@@ -51,12 +51,11 @@
         <p>What you will need is celery, peanut butter, and raisins.</p>
         <p>All you need to do is cut and prepare the celery then put peanut butter through the middle of the groove of
             the celery, until you have the amount you like, then sprinkle the raisins on top of the peanut butter</p>
-        <h2>Dessert Recipes</h2>
+        <h2 class = "Header">Dessert Recipes</h2>
     </main>
 </body>
 <!--Footer-->
 <footer>
     <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
-
 </html>
