--- a/vegan.html
+++ b/vegan.html
@@ -17,13 +17,13 @@
         <h1>Mom's Vegan Recipes</h1>
     </header>
     <!--Navagation-->
-    <nav id="navbar">
-        <ul id="navlist">
-            <li><a href="index.html"> Home </a></li>
-            <li><a href="dairyfree.html"> Dairy Free Recipes </a></li>
-            <li><a href="vegetarian.html"> Vegetarian Recipes </a></li>
-            <li><a href="glutenfree.html"> Gluten Free Recipes </a></li>
-            <li><a href="vegan.html"> Vegan Recipes </a></li>
+    <nav id="navbar" class ="navbar">
+        <ul id="navlist" >
+            <li class = "active"><a href="index.html"> Home </a></li>
+            <li class = "active"><a href="dairyfree.html"> Dairy Free Recipes </a></li>
+            <li class = "active"><a href="vegetarian.html"> Vegetarian Recipes </a></li>
+            <li class = "active"><a href="glutenfree.html"> Gluten Free Recipes </a></li>
+            <li class = "active"><a href="vegan.html"> Vegan Recipes </a></li>
         </ul>
     </nav>
     <!--DAIRYFREE PAGE LINK-->
