Messing around with the designs

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     </header>
     <!--Navagation-->
     <nav id="navbar" class ="navbar">
-        <ul id="navlist" >
-            <li class = "active"><a href="index.html"> Home </a></li>
-            <li class = "active"><a href="dairyfree.html"> Dairy Free Recipes </a></li>
-            <li class = "active"><a href="vegetarian.html"> Vegetarian Recipes </a></li>
-            <li class = "active"><a href="glutenfree.html"> Gluten Free Recipes </a></li>
-            <li class = "active"><a href="vegan.html"> Vegan Recipes </a></li>
+        <ul id="navlist" class ="im" >
+            <li class = "active"><a  class ="current" href="index.html"> Home </a></li>
+            <li class = "active"><a class ="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
+            <li class = "active"><a class ="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
+            <li class = "active"><a class ="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
+            <li class = "active"><a class ="current" href="vegan.html"> Vegan Recipes </a></li>
         </ul>
     </nav>
     <!--Main-->
@@ -46,7 +46,7 @@
             <li>As more people are choicing to eat in different ways I will need to be able to cook for them </li>
             <li>It is healthier to cook</li>
         </ol>
-        <p id ="links"> Before we start we should mention that all the recipes here are made for people who are <a
+        <p class ="links"> Before we start we should mention that all the recipes here are made for people who are <a
                 href="vegan.html#vegan">Vegan</a>, <a href="vegetarian.html#vegetarian">Vegetarian</a>, <a
                 href="dairyfree.html#dairy">Dairy Free</a>, and <a href="glutenfree.html#Gluten">Gluten Free</a>. If you
             have questions about health and eating any of these ways you can visit <a
