--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <nav id="navbar" class ="navbar">
         <ul id="navlist" class ="im" >
             <li class = "active"><a  class ="current" href="index.html"> Home </a></li>
-            <li class = "active"><a class ="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
-            <li class = "active"><a class ="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
-            <li class = "active"><a class ="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
-            <li class = "active"><a class ="current" href="vegan.html"> Vegan Recipes </a></li>
+            <li><a class ="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
+            <li><a class ="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
+            <li><a class ="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
+            <li><a class ="current" href="vegan.html"> Vegan Recipes </a></li>
         </ul>
     </nav>
     <!--Main-->
