Adding Gallery and some more recipes

--- a/Reg.html
+++ b/Reg.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
-    <link href="/css files/dairy.css" rel="stylesheet">
+    <link href="/css files/Reg.css" rel="stylesheet">
     <title>Dairy Free Recipes</title>
 </head>
 
@@ -20,25 +20,17 @@
     <nav id="navbar" class ="navbar">
         <ul id="navlist" >
             <li><a  class ="current" href="index.html"> Home </a></li>
-            <li class = "active"><a class ="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
+            <li class = "current"><a class ="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
             <li><a class ="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
             <li><a class ="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
             <li><a class ="current" href="vegan.html"> Vegan Recipes </a></li>
-            <li><a class ="current" href="Reg.html"> Regular Recipes </a></li>
+            <li class = "active"><a  class ="current" href="Reg.html"> Regular Recipes </a></li>
             <li><a class="current" href="gallery.html"> Gallery</a></li>
         </ul>
     </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
-        <h2 id="dairy"> Why to cook Dairy Free</h2>
-        <p>Find out why to cook dairy free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
-            nothing against eating and drinking dairy products.</p>
-        <ul id ="why">
-            <li>helps prevents headaches</li>
-            <li>allows healthy digestion</li>
-            <li>allows more energy (especially for those who are allergic)</li>
-            <li>gives a reason to keep other forms of "milk" in business</li>
-        </ul>
+        <h2 id="REG"> Our regular recipes (with notes of how we change to suit our needs)</h2>
         
         <!--Recipes sections-->
         <h2 class = "Header">Breakfast Recipes</h2>
