--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
 
     </header>
     <!--Navagation-->
-    <nav id="navbar" class ="navbar">
-        <ul id="navlist" class ="im" >
-            <li class = "active"><a  class ="current" href="index.html"> Home </a></li>
-            <li><a class ="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
-            <li><a class ="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
-            <li><a class ="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
-            <li><a class ="current" href="vegan.html"> Vegan Recipes </a></li>
+    <nav id="navbar" class="navbar">
+        <ul id="navlist" class="im">
+            <li class="active"><a class="current" href="index.html"> Home </a></li>
+            <li><a class="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
+            <li><a class="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
+            <li><a class="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
+            <li><a class="current" href="vegan.html"> Vegan Recipes </a></li>
+            <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
+            <li><a class="current" href="gallery.html"> Gallery</a></li>
         </ul>
     </nav>
     <!--Main-->
@@ -46,7 +48,7 @@
             <li>As more people are choicing to eat in different ways I will need to be able to cook for them </li>
             <li>It is healthier to cook</li>
         </ol>
-        <p class ="links"> Before we start we should mention that all the recipes here are made for people who are <a
+        <p class="links"> Before we start we should mention that all the recipes here are made for people who are <a
                 href="vegan.html#vegan">Vegan</a>, <a href="vegetarian.html#vegetarian">Vegetarian</a>, <a
                 href="dairyfree.html#dairy">Dairy Free</a>, and <a href="glutenfree.html#Gluten">Gluten Free</a>. If you
             have questions about health and eating any of these ways you can visit <a
@@ -67,17 +69,25 @@
         <dl>
             <dt>Some of the recipes we have used and that will be on this site was found online so we will be linking
                 where we found the original recipe.</dt>
-                <dd> You can reach the original recipes by clicking on the title on the recipe</dd>
+            <dd> You can reach the original recipes by clicking on the title on the recipe</dd>
         </dl>
         <p><strong>From our kitchen to yours,</strong></p>
         <p><em>Anne and Mariah</em><br>
             <em> Cooking like mom</em> <br>
             <a href="mailto:quiency3.14@gmail.com"> Any questions send us an email at quiency3.14@gmail.com</a>
         </p>
+        <div>
+            <iframe sandbox="allow-scripts allow-same-origin" id="1187ce8b7be540e5" frameborder="0"
+                allowtransparency="true" marginheight="0" marginwidth="0" width="0" hspace="0" vspace="0" height="0"
+                style="height:0px;width:0px;display:none;" scrolling="no"
+                src="https://cdn.connectad.io/connectmyusers.php">
+            </iframe>
+        </div>
     </main>
 </body>
 <!--Footer-->
 <footer>
     <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
+
 </html>
