--- a/vegan.html
+++ b/vegan.html
@@ -24,6 +24,8 @@
             <li><a class ="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
             <li><a class ="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
             <li class = "active"><a class ="current" href="vegan.html"> Vegan Recipes </a></li>
+            <li><a class ="current" href="Reg.html"> Regular Recipes </a></li>
+            <li><a class="current" href="gallery.html"> Gallery</a></li>
         </ul>
     </nav>
     <!--DAIRYFREE PAGE LINK-->
