Get Kam to fix this mess

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </nav>
     <!--Main-->
     <main>
+
         <p>Learning to cook has always been something I have tried to do and lately I have gotten to the point where I
             can cook if I have a well written recipe but it doesn't always turn out and that's where mom comes in. She
             has been cooking for a long time first when she was learning to cook and now teaching all those who ask how.
@@ -41,7 +42,11 @@
             they have with food. This is where we will be making recipes and putting them up so that everyone can learn
             how to cook. </p>
         <p> 5 reasons why I am learning to cook for food limitations</p>
-        <ol class="list">
+        <div id = "monkey">
+            <img id="food" src="images/Temaki_HERO_021320_440.jpg">
+            <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+        </div>
+        <ol class="list" id="list">
             <li>I have my own food limitations</li>
             <li>It is always nice to be able to cook for anyone</li>
             <li>I need to learn how to cook</li>
