--- a/index.html
+++ b/index.html
@@ -43,16 +43,19 @@
             how to cook. </p>
         <p> 5 reasons why I am learning to cook for food limitations</p>
         <div id = "monkey">
+            <ol class="list" id="list">
+                <li>I have my own food limitations</li>
+                <li>It is always nice to be able to cook for anyone</li>
+                <li>I need to learn how to cook</li>
+                <li>As more people are choicing to eat in different ways I will need to be able to cook for them </li>
+                <li>It is healthier to cook</li>
+            </ol>
+            <div id = "george">
             <img id="food" src="images/Temaki_HERO_021320_440.jpg">
             <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
         </div>
-        <ol class="list" id="list">
-            <li>I have my own food limitations</li>
-            <li>It is always nice to be able to cook for anyone</li>
-            <li>I need to learn how to cook</li>
-            <li>As more people are choicing to eat in different ways I will need to be able to cook for them </li>
-            <li>It is healthier to cook</li>
-        </ol>
+       
+    </div>
         <p class="links"> Before we start we should mention that all the recipes here are made for people who are <a
                 href="vegan.html#vegan">Vegan</a>, <a href="vegetarian.html#vegetarian">Vegetarian</a>, <a
                 href="dairyfree.html#dairy">Dairy Free</a>, and <a href="glutenfree.html#Gluten">Gluten Free</a>. If you
