Setting up the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -28,5 +28,10 @@
                 <li class="active"><a class="current" href="gallery.html"> Gallery</a></li>
             </ul>
         </nav>
+        <main> </main>
 </body>
+<!--Footer-->
+<footer>
+    <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
+</footer>
 </html>
