Getting the gallery all set up

--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,29 +10,58 @@
     <link href="/css files/gallery.css" rel="stylesheet">
     <title>Gallery</title>
 </head>
+
 <body>
-        <!--Header-->
-        <header>
-            <h1> Learning to Cook like Mom</h1>
-            <h2>From our kitchen to yours</h2>
-    
-        </header>
-        <!--Navagation-->
-        <nav id="navbar" class="navbar">
-            <ul id="navlist" class="im">
-                <li><a class="current" href="index.html"> Home </a></li>
-                <li><a class="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
-                <li><a class="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
-                <li><a class="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
-                <li><a class="current" href="vegan.html"> Vegan Recipes </a></li>
-                <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
-                <li class="active"><a class="current" href="gallery.html"> Gallery</a></li>
-            </ul>
-        </nav>
-        <main> </main>
+    <!--Header-->
+    <header>
+        <h1> Learning to Cook like Mom</h1>
+        <h2>From our kitchen to yours</h2>
+
+    </header>
+    <!--Navagation-->
+    <nav id="navbar" class="navbar">
+        <ul id="navlist" class="im">
+            <li><a class="current" href="index.html"> Home </a></li>
+            <li><a class="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
+            <li><a class="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
+            <li><a class="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
+            <li><a class="current" href="vegan.html"> Vegan Recipes </a></li>
+            <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
+            <li class="active"><a class="current" href="gallery.html"> Gallery</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div id="projectgrid" class="images">
+            <div id="george">
+                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+            </div>
+            <div id="george">
+                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+            </div>
+            <div id="george">
+                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+            </div>
+            <div id="george">
+                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+            </div>
+            <div id="george">
+                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+            </div>
+            <div id="george">
+                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+            </div>
+        </div>
+    </main>
 </body>
 <!--Footer-->
 <footer>
     <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
+
 </html>
